Bug 1362462: Fallback to main document widget for frames which haven't been inserted yet. r=mconley

MozReview-Commit-ID: Ayr2kQ9KqbW

--HG--
extra : rebase_source : db78c2c13f87357f64085685629c0e2f96a5acbf